demo redundant style remove

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -13,7 +13,7 @@
 		.alert  { display: none; }
 	</style>
 </head>
-<body class="container" style="padding-top: 100px">
+<body class="container">
 
 	<h1>Typeahead Demo</h1>
 
