removed VS project, updated demo

--- a/tests/index.htm
+++ b/tests/index.htm
@@ -2,14 +2,14 @@
 <html>
 <head>
     <title>Bootstrap Plugin Test Suite</title>
-    <script src="../../js/jquery.min.js"></script>
+    <script src="lib/jquery.min.js"></script>
     <!-- qunit -->
     <link rel="stylesheet" href="css/qunit.css" type="text/css" media="screen" />
     <script src="lib/qunit.js"></script>
     <!--  plugin source -->
-    <script src="../js/bootstrap-typeahead.js"></script>
+    <script src="../lib/bootstrap-typeahead.js"></script>
     <!-- unit tests -->
-    <script src="unit/typeahead-tests.js"></script>
+    <script src="typeahead-tests.js"></script>
 </head>
 <body>
     <div>
