--- a/demo/demo.html
+++ b/demo/demo.html
@@ -7,7 +7,8 @@
     <link href="css/demo.css" rel="stylesheet">
     <script src="js/prettify.js" type="text/javascript"></script>
     <script src="js/jquery.min.js" type="text/javascript"></script>
-    <script src="js/bootstrap-typeahead.js" type="text/javascript"></script>
+    <script src="js/mockjax.js" type="text/javascript"></script>
+    <script src="../lib/bootstrap-typeahead.js" type="text/javascript"></script>
     <script src="js/demo.js" type="text/javascript"></script>
 </head>
 <body class="container">
@@ -87,6 +88,14 @@
     });
 </pre>
     </div>
+      <hr />
+    <div class="row">
+        <div class="well span4">
+            <input id="demo4" type="text" class="span4" placeholder="Search cities..." />
+        </div>
+<pre class="prettyprint span7">
     
+</pre>
+    </div>  
 </body>
 </html>
