deleted temp file

--- a/tests/index.htm
+++ b/tests/index.htm
@@ -3,6 +3,7 @@
 <head>
     <title>Bootstrap Plugin Test Suite</title>
     <script src="lib/jquery.min.js"></script>
+    <script src="lib/mockjax.js"></script>
     <!-- qunit -->
     <link rel="stylesheet" href="css/qunit.css" type="text/css" media="screen" />
     <script src="lib/qunit.js"></script>
