added support for jQuery 1.8

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -6,15 +6,17 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/demo.css" rel="stylesheet">
     <script src="js/prettify.js" type="text/javascript"></script>
-    <script src="js/jquery.min.js" type="text/javascript"></script>
+    <!-- Pick which version of jQuery to use -->    
+    <!-- <script src="js/jquery-1.7.2.min.js" type="text/javascript"></script> -->    
+    <script src="js/jquery-1.8.0.min.js" type="text/javascript"></script>
     <script src="js/mockjax.js" type="text/javascript"></script>
-    <script src="../lib/bootstrap-typeahead.js" type="text/javascript"></script>
+    <script src="../js/bootstrap-typeahead.js" type="text/javascript"></script>
     <script src="js/demo.js" type="text/javascript"></script>
 </head>
 <body class="container">
     <h1>
         Twitter Bootstrap Typeahead Extension Demo</h1>
-    v1.2<br />
+    v1.2.2<br />
     Terry Rosen<br />
     <a href="https://github.com/tcrosen/twitter-bootstrap-typeahead" target="_blank">https://github.com/tcrosen/twitter-bootstrap-typeahead</a>
     <hr />
