--- a/tests/index.htm
+++ b/tests/index.htm
@@ -1,21 +1,23 @@
 ﻿<!DOCTYPE HTML>
 <html>
 <head>
-    <title>Bootstrap Plugin Test Suite</title>
-    <script src="lib/jquery.min.js"></script>
+    <title>Bootstrap Typeahead Test Suite</title>
+    <!-- Pick which version of jQuery to use -->    
+    <!-- <script src="lib/js/jquery-1.7.2.min.js" type="text/javascript"></script> -->    
+    <script src="lib/js/jquery-1.8.0.min.js" type="text/javascript"></script>
     <script src="lib/mockjax.js"></script>
     <!-- qunit -->
     <link rel="stylesheet" href="css/qunit.css" type="text/css" media="screen" />
     <script src="lib/qunit.js"></script>
     <!--  plugin source -->
-    <script src="../lib/bootstrap-typeahead.js"></script>
+    <script src="../js/bootstrap-typeahead.js"></script>
     <!-- unit tests -->
     <script src="typeahead-tests.js"></script>
 </head>
 <body>
     <div>
         <h1 id="qunit-header">
-            Bootstrap Plugin Test Suite</h1>
+            Bootstrap Typeahead Test Suite</h1>
         <h2 id="qunit-banner">
         </h2>
         <h2 id="qunit-userAgent">
