--- a/tests/index.htm
+++ b/tests/index.htm
@@ -4,7 +4,7 @@
     <title>Bootstrap Typeahead Test Suite</title>
     <!-- Pick which version of jQuery to use -->    
     <!-- <script src="lib/js/jquery-1.7.2.min.js" type="text/javascript"></script> -->    
-    <script src="lib/js/jquery-1.8.0.min.js" type="text/javascript"></script>
+    <script src="lib/jquery-1.8.0.min.js" type="text/javascript"></script>
     <script src="lib/mockjax.js"></script>
     <!-- qunit -->
     <link rel="stylesheet" href="css/qunit.css" type="text/css" media="screen" />
