--- a/demo/demo.html
+++ b/demo/demo.html
@@ -9,6 +9,7 @@
     <!-- Pick which version of jQuery to use -->
     <!-- <script src="js/jquery-1.7.2.min.js" type="text/javascript"></script> -->
     <script src="js/jquery-1.8.0.min.js" type="text/javascript"></script>
+    <script src="js/underscore.min.js" type="text/javascript"></script>
     <script src="js/mockjax.js" type="text/javascript"></script>
     <script src="../js/bootstrap-typeahead.js" type="text/javascript"></script>
     <script src="js/demo.js" type="text/javascript"></script>
