--- a/demo/demo.html
+++ b/demo/demo.html
@@ -1,118 +1,96 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Twitter Bootstrap Typeahead Extension Demo</title>
-    <link href="css/prettify.css" rel="stylesheet" />
+    <title>Bootstrap Typeahead+</title>
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/demo.css" rel="stylesheet">
-    <script src="js/prettify.js" type="text/javascript"></script>
+    <link href="css/bootstrap-responsive.css" rel="stylesheet">
     <!-- Pick which version of jQuery to use -->
     <!-- <script src="js/jquery-1.7.2.min.js" type="text/javascript"></script> -->
     <script src="js/jquery-1.8.0.min.js" type="text/javascript"></script>
     <script src="js/underscore.min.js" type="text/javascript"></script>
     <script src="js/mockjax.js" type="text/javascript"></script>
+    <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="../js/bootstrap-typeahead.js" type="text/javascript"></script>
     <script src="js/demo.js" type="text/javascript"></script>
 </head>
-<body class="container">
-    <h1>
-        Twitter Bootstrap Typeahead Extension Demo</h1>
-    v1.2.2<br />
-    Terry Rosen<br />
-    <a href="https://github.com/tcrosen/twitter-bootstrap-typeahead" target="_blank">https://github.com/tcrosen/twitter-bootstrap-typeahead</a>
-    <hr />
-    <div class="alert alert-block alert-success">
+<body>
+	<div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container">
+        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </a>
+        <div class="nav-collapse collapse">
+          <ul class="nav">
+            <li class="active"><a href="#">Demos</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="https://github.com/tcrosen/twitter-bootstrap-typeahead" target="_blank">Github</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Contact <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="https://twitter.com/rerrify"><img src="img/bird.png" class="bird" />@rerrify</a></li>
+                <li><a href="mailto:tcrosen@gmail.com"><i class="icon-envelope"></i> tcrosen@gmail.com</a></li>
+              </ul>
+            </li>
+          </ul>
+          <div class="pull-right">
+          	<a class="brand" href="#">Bootstrap Typeahead+</a>
+        	</div>
+        </div><!--/.nav-collapse -->
+      </div>
     </div>
-    <div class="row">
-        <div class="well span4">
-            <input id="demo1" type="text" class="span4" placeholder="Search cities..." />
-        </div>
-<pre class="prettyprint span7">
-    $('#demo1').typeahead({
-        source: [
-            { id: 1, name: 'Toronto' },
-            { id: 2, name: 'Montreal' },
-            { id: 3, name: 'New York' },
-            { id: 4, name: 'Buffalo' },
-            { id: 5, name: 'Boston' },
-            { id: 6, name: 'Columbus' },
-            { id: 7, name: 'Dallas' },
-            { id: 8, name: 'Vancouver' },
-            { id: 9, name: 'Seattle' },
-            { id: 10, name: 'Los Angeles' }
-        ]
-    });
-</pre>
-    </div>
-    <hr />
-    <div class="row">
-        <div class="well span4">
-            <input id="demo2" type="text" class="span4" placeholder="Search cities..." />
-        </div>
-<pre class="prettyprint span7">
-    $('#demo2').typeahead({
-        source: [
-            { ID: 1, Name: 'Toronto' },
-            { ID: 2, Name: 'Montreal' },
-            { ID: 3, Name: 'New York' },
-            { ID: 4, Name: 'Buffalo' },
-            { ID: 5, Name: 'Boston' },
-            { ID: 6, Name: 'Columbus' },
-            { ID: 7, Name: 'Dallas' },
-            { ID: 8, Name: 'Vancouver' },
-            { ID: 9, Name: 'Seattle' },
-            { ID: 10, Name: 'Los Angeles' }
-        ],
-        display: 'Name',
-        val: 'ID'
-    });
-</pre>
-    </div>
-    <hr />
-    <div class="row">
-        <div class="well span4">
-            <input id="demo3" type="text" class="span4" placeholder="Search cities..." />
-        </div>
-<pre class="prettyprint span7">
-    $('#demo3').typeahead({
-        source: [
-            { id: 1, full_name: 'Toronto', first_two_letters: 'To' },
-            { id: 2, full_name: 'Montreal', first_two_letters: 'Mo' },
-            { id: 3, full_name: 'New York', first_two_letters: 'Ne' },
-            { id: 4, full_name: 'Buffalo', first_two_letters: 'Bu' },
-            { id: 5, full_name: 'Boston', first_two_letters: 'Bo' },
-            { id: 6, full_name: 'Columbus', first_two_letters: 'Co' },
-            { id: 7, full_name: 'Dallas', first_two_letters: 'Da' },
-            { id: 8, full_name: 'Vancouver', first_two_letters: 'Va' },
-            { id: 9, full_name: 'Seattle', first_two_letters: 'Se' },
-            { id: 10, full_name: 'Los Angeles', first_two_letters: 'Lo' }
-        ],
-        display: 'full_name'
-    });
-</pre>
-    </div>
-    <hr />
-    <div class="row">
-        <div class="well span4">
-            <input id="demo4" type="text" class="span4" placeholder="Search cities..." />
-        </div>
-<pre class="prettyprint span7">
-    $('#demo4').typeahead({
-        ajax: '/cities/list'
-    });
-</pre>
-    </div>
-    <hr />
-    <div class="row">
-        <div class="well span4">
-            <input id="demo5" type="text" class="span4" placeholder="Search cities..." />
-        </div>
-<pre class="prettyprint span7">
-    $('#demo5').typeahead({
-        ajax: { url: '/cities/list',
-                triggerLength: 1 }
-    });
-</pre>
-    </div>
+  </div>
+  <div class="container">
+    <ul class="nav nav-pills" id="tabs">
+		  <li class="active"><a href="#basic-usage">Basic Usage</a></li>
+		  <li><a href="#basic-customisation">Basic Customisation</a></li>
+		  <li><a href="#demo3">Ajax</a></li>
+		  <li><a href="#demo4">Ajax with Template</a></li>
+		</ul>
+		<div class="tab-content">
+		 	<div class="alert alert-block alert-success">
+    	</div>
+		  <div class="tab-pane active" id="basic-usage">
+		  	<h3>Features</h3>
+		  	<ul>
+		  		<li>Local data source</li>
+		  	</ul>
+		  	<h3>Code</h3>
+<pre>$('#basic-usage input').typeahead({
+  source: src
+});</pre>
+				<h3>Try it!</h3>
+			  <input type="text" class="span4" placeholder="Search..." />
+		  </div>
+		  <div class="tab-pane" id="basic-customisation">
+		  	<h3>Features</h3>
+		  	<ul>
+		  		<li>Local data source</li>
+		  		<li>Custom <code>val</code> property</li>
+		  		<li>Limit results to 4</li>
+		  	</ul>
+		  	<h3>Code</h3>
+<pre>$('#basic-customisation').typeahead({
+  source: src,
+  val: 'key',
+  maxResults: 4
+});</pre>
+				<h3>Try it!</h3>
+		  	<input type="text" class="span4" placeholder="Search..." />
+		  </div>
+		  <div class="tab-pane" id="demo3">
+		  	<input type="text" class="span4" placeholder="Search..." />
+		  </div>
+		  <div class="tab-pane" id="demo4">
+		  	<div class="progress progress-striped active">
+				  <div class="bar" style="width: 100%;"></div>
+				</div>
+		  	<input type="text" class="span4" placeholder="Search..." />
+		  </div>
+		</div>
+	</div>
 </body>
 </html>
