--- a/tests/index.htm
+++ b/tests/index.htm
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE HTML>
 <html>
 <head>
-    <title>Bootstrap Typeahead Test Suite</title>
-    <!-- Pick which version of jQuery to use -->    
-    <!-- <script src="lib/js/jquery-1.7.2.min.js" type="text/javascript"></script> -->    
+    <title>Bootstrap Typeahead+ Test Suite</title>
+    <!-- Pick which version of jQuery to use -->
+    <!-- <script src="lib/js/jquery-1.7.2.min.js" type="text/javascript"></script> -->
     <script src="lib/jquery-1.8.0.min.js" type="text/javascript"></script>
     <script src="lib/mockjax.js"></script>
     <!-- qunit -->
@@ -17,7 +17,7 @@
 <body>
     <div>
         <h1 id="qunit-header">
-            Bootstrap Typeahead Test Suite</h1>
+            Bootstrap Typeahead+ Test Suite</h1>
         <h2 id="qunit-banner">
         </h2>
         <h2 id="qunit-userAgent">
