--- a/demo/demo.html
+++ b/demo/demo.html
@@ -24,7 +24,7 @@
     </div>
     <div class="row">
         <div class="well span4">
-            <input id="demo1" type="text" class="span4" placeholder="Search cities..." />
+            <input id="demo1" type="text" class="span4" placeholder="Search cities..." autocomplete="off" />
         </div>
 <pre class="prettyprint span7">
     $('#demo1').typeahead({
@@ -46,7 +46,7 @@
     <hr />
     <div class="row">
         <div class="well span4">
-            <input id="demo2" type="text" class="span4" placeholder="Search cities..." />
+            <input id="demo2" type="text" class="span4" placeholder="Search cities..." autocomplete="off" />
         </div>
 <pre class="prettyprint span7">
     $('#demo2').typeahead({
@@ -70,7 +70,7 @@
     <hr />
     <div class="row">
         <div class="well span4">
-            <input id="demo3" type="text" class="span4" placeholder="Search cities..." />
+            <input id="demo3" type="text" class="span4" placeholder="Search cities..." autocomplete="off" />
         </div>
 <pre class="prettyprint span7">
     $('#demo3').typeahead({
@@ -93,7 +93,7 @@
     <hr />
     <div class="row">
         <div class="well span4">
-            <input id="demo4" type="text" class="span4" placeholder="Search cities..." />
+            <input id="demo4" type="text" class="span4" placeholder="Search cities..." autocomplete="off" />
         </div>
 <pre class="prettyprint span7">
     $('#demo4').typeahead({
@@ -104,7 +104,7 @@
     <hr />
     <div class="row">
         <div class="well span4">
-            <input id="demo5" type="text" class="span4" placeholder="Search cities..." />
+            <input id="demo5" type="text" class="span4" placeholder="Search cities..." autocomplete="off" />
         </div>
 <pre class="prettyprint span7">
     $('#demo5').typeahead({
